commit reorg